# jsnpg

./: .gitignore  BUILDING  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  alloc.c  common.h  debug.c  dom.c  dom.h  error.c  generate.c  generate.h  input.c  jsnpg.c  jsnpg.pc.in  output.c  parse.c  parsenext.c  parser.c  stack.c  types.h  utf8.c
src/include/: def_gen_macros.h  jsnpg.h  undef_gen_macros.h
test/: CMakeLists.txt  jsnpgtest.c  perflog.sh  run_tests.sh  testutil.c  tster
test/json/input/: README.md  t_bufx_esc.json  t_bufx_esc_u1.json  t_bufx_esc_u2.json  t_bufx_esc_u3.json  t_bufx_esc_u4.json  t_bufx_num1.json  t_bufx_num2.json  t_bufx_num3.json  t_bufx_num4.json  t_main.json
test/json/optional/: 1-comments.json  2-trailing_commas.json  3-trailing_chars.json  4-multiple_values.json  5-invalid_utf8.json
test/json/passed/: 1-comments.json  2-trailing_commas.json  4-multiple_values.json  i_number_too_big_neg_int.json  i_number_too_big_pos_int.json  i_number_very_big_negative_int.json  number_-9223372036854775809.json  number_10000000000000000999.json  number_1e6.json  number_9223372036854775808.json  object_key_nfc_nfd.json  object_key_nfd_nfc.json  object_same_key_same_value.json  object_same_key_unclear_values.json  pass01.json  roundtrip10.json  roundtrip12.json  roundtrip13.json  roundtrip16.json  roundtrip18.json  roundtrip22.json  roundtrip23.json  roundtrip25.json  roundtrip26.json  roundtrip27.json  t_bufx_esc_u1.json  t_bufx_num1.json  t_bufx_num2.json  t_bufx_num3.json  t_bufx_num4.json  t_bufx_str1.json  t_bufx_str2.json  t_bufx_str3.json  t_main.json  y_number.json  y_number_int_with_exp.json  y_number_real_capital_e.json  y_number_real_exponent.json  y_number_real_fraction_exponent.json  y_number_real_pos_exponent.json  (+19 more)
test/json/pretty/: i_number_too_big_neg_int.json  i_number_too_big_pos_int.json  i_number_very_big_negative_int.json  i_structure_500_nested_arrays.json  number_-9223372036854775808.json  number_-9223372036854775809.json  number_1.000000000000000005.json  number_1e6.json  (+97 more)
